--- a/index.html
+++ b/index.html
@@ -1,43 +1,26 @@
-<html>
-<head>
-  <meta charset="uyf-8"/>
-  <meta name="description" content="Это тестовая страница"/>
-  <meta name="keywords" content="Тест,обучение,теги"/>
-  <meta name="author" content="Я автор"/>
-  <title>
-    Пидор
-  </title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
+    <title>TRAYZER.ru &mdash; Coming Soon</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="description" content="This is a default index page for a new domain."/>
+    <style type="text/css">
+        body {font-size:10px; color:#777777; font-family:arial; text-align:center;}
+        h1 {font-size:64px; color:#555555; margin: 70px 0 50px 0;}
+        p {width:320px; text-align:center; margin-left:auto;margin-right:auto; margin-top: 30px }
+        div {width:320px; text-align:center; margin-left:auto;margin-right:auto;}
+        a:link {color: #34536A;}
+        a:visited {color: #34536A;}
+        a:active {color: #34536A;}
+        a:hover {color: #34536A;}
+    </style>
 </head>
+
 <body>
-  <header>
-    Шапка сайта
-  </header>
-
-  <p><strong>Жирный</p>
-    <h1>заголовок</h1>
-    <Center><a href ="http://google.com" target="_blank" title="нажмите что бы открыть">Откроется в новый вкладе</a></center>
-      <p>Текст<br>текст</p>
-      <hr>
-      <abbr title=" html 5"> HTML </abbr>
-      <code>&lt;?php echo "Hello"?&lt;</code>
-      <ul>
-        <li>первый элемент</li>
-        <li>Второй элемент</li>
-      </ul>
-
-      <img src="1.PNG"  title="Текст любой">
-
-      <ol>
-
-        <li>первый элемент</li>
-        <li>второй элемент</li>
-      </ol>
-      <ol start="2">
-        <li>первый элемент</li>
-        <li>второй элемент</li>
-      </ol>
-      <footer>
-        Подвал нашего сайта
-      </footer>
+    <h1>TRAYZER.ru</h1>
+    <div>
+        <a href="http://vk.com/trayzer">Powered by иван митник</a>
+    </div>
 </body>
+
 </html>
+
